Docstrings -> Google style; edit css style for blue main

--- a/docs/src/.overrides/assets/stylesheets/extra.css
+++ b/docs/src/.overrides/assets/stylesheets/extra.css
@@ -25,7 +25,7 @@
     /* primary text */
     --md-typeset-color: var(--dj-black);
     /* code comments + diagram text */
-    --md-code-fg-color: var(--dj-secondary);
+    --md-code-fg-color: var(--dj-primary);
 
     /* footer */
     /* previous/next text */
@@ -51,7 +51,7 @@
     /* primary text */
     --md-typeset-color: var(--dj-white);
     /* code comments + diagram text */
-    --md-code-fg-color: var(--dj-secondary);
+    --md-code-fg-color: var(--dj-primary);
 
     /* footer */
     /* previous/next text */
