--- a/docs/src/.overrides/partials/nav.html
+++ b/docs/src/.overrides/partials/nav.html
@@ -14,7 +14,7 @@
         {#-
         Add DataJoint home link to navigation header, otherwise unchanged
         -#}
-        <a href="https://datajoint.com/docs/" title="DataJoint">
+        <a href="https://datajoint.com/docs/elements/" title="DataJoint Elements">
             ⬅ Home
         </a>
     </label>
