Update social icon colors

--- a/docs/src/.overrides/assets/stylesheets/extra.css
+++ b/docs/src/.overrides/assets/stylesheets/extra.css
@@ -11,6 +11,35 @@
     display: none
 }
 
+/* footer social icons */
+html a[title="DataJoint"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="Slack"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="LinkedIn"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="Twitter"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="GitHub"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="DockerHub"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="PyPI"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="StackOverflow"].md-social__link svg {
+    color: var(--dj-primary);
+}
+html a[title="YouTube"].md-social__link svg {
+    color: var(--dj-primary);
+}
+
 [data-md-color-scheme="datajoint"] {
     /* ribbon */
     /* ribbon + markdown heading expansion */
